--- a/Signup.html
+++ b/Signup.html
@@ -1,62 +1,91 @@
 <html>
-    <div class="content-wrapper">
-        <div class="content">
-            <div class="signup-wrapper shadow-box">
-                <div class="company-details ">
-                    <div class="shadow"></div>
-                    <div class="wrapper-1">
-                        <!-- <div class="logo">
-                            <div class="icon-food">
+    <head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script>
+        $(document).ready(function() {
+            var name = $("#name").val();
+            var email = $("#email").val();
+            var password = $("#password").val();
+            var formData = 'name=' + name + '&email=' + email + '&password=' + pass;
+            $.ajax({
+                type: "POST",
+                url: "Submit_Form.php",
+                data: formData,
+                cache: false,
+                //success: function(result) {
+                    //alert(result);
+                //}
+            }).done(function(response){
+                $("#server-results").html(response);
+            });
+            return false;
+        });
+        </script>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    </head>
+    <body>
+        <div class="content-wrapper">
+            <div class="content">
+                <div class="signup-wrapper shadow-box">
+                    <div class="company-details ">
+                        <div class="shadow"></div>
+                        <div class="wrapper-1">
+                            <!-- <div class="logo">
+                                <div class="icon-food">
 
-                            </div>
-                        </div> -->
-                        <h1 class="title">Blog.com</h1>
-                        <div class="slogan">Create a blog and share
-                            your voice in minutes.</div>
-                    </div>
-
-                </div>
-                <div class="signup-form ">
-                    <div class="wrapper-2">
-                        <div class="form-title">Sign Up Today!</div>
-                        <div class="form">
-                            <form>
-                                <head>
-                                    <link rel="stylesheet" type="text/css" href="Signup.css">
-                                </head>
-                                <p class="content-item">
-                                    <label>
-                                        full name
-                                        <input type="text" placeholder="Lorem ipsum" required>
-                                    </label>
-                                </p>
-
-                                <p class="content-item">
-                                    <label>
-                                        email address
-                                        <input type="text" placeholder="lorem@loremipsum.com" name="email" required>
-                                    </label>
-                                </p>
-
-                                <p class="content-item">
-
-                                    <label>
-                                        password
-                                        <input type="password" placeholder="*****" name="psw" required>
-                                    </label>
-                                </p>
-
-
-                                <button type="submit" class="signup">Sign Up </button>
-                
-                            </form>
+                                </div>
+                            </div> -->
+                            <h1 class="title">Blog.com</h1>
+                            <div class="slogan">Create a blog and share
+                                your voice in minutes.</div>
                         </div>
+
+                    </div>
+                    <div class="signup-form ">
+                        <div class="wrapper-2">
+                            <div class="form-title">Sign Up Today!</div>
+                            <div class="form">
+                                <form id="signup" action="Submit_Form.php" method="POST">
+                                    <head>
+                                        <link rel="stylesheet" type="text/css" href="Signup.css">
+                                    </head>
+                                    <p class="content-item">
+                                        <label>
+                                            full name
+                                            <input type="text" placeholder="Lorem ipsum" name="name" required>
+                                        </label>
+                                    </p>
+
+                                    <p class="content-item">
+                                        <label>
+                                            email address
+                                            <input type="text" placeholder="lorem@loremipsum.com" name="email" required>
+                                        </label>
+                                    </p>
+
+                                    <p class="content-item">
+                                        <label>
+                                            password
+                                            <input type="password" placeholder="*****" name="password" required>
+                                        </label>
+                                    </p>
+
+
+                                    <button type="submit" class="signup">Sign Up </button>
+                    
+                                    <p class="content-item">
+                                        <div id="server-results"></div>
+                                    </p>
+
+                                </form>
+                            </div>
+                        </div>
+
                     </div>
 
                 </div>
-
             </div>
         </div>
-    </div>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    </body>
 </html>
