--- a/Signup.html
+++ b/Signup.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <title>User Signup</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script>
         $(document).ready(function() {
@@ -51,22 +53,26 @@
                                     </head>
                                     <p class="content-item">
                                         <label>
-                                            full name
-                                            <input type="text" placeholder="Lorem ipsum" name="name" required>
+                                            Username
+                                            <input type="text" placeholder="Lorem ipsum" name="name" pattern="^([a-zA-Z0-9]([._-](?![._-])|[a-zA-Z0-9]){1,18}[a-zA-Z0-9])$"
+                                            title="Username only have upper-case, lower-case and special character:._- " required>
                                         </label>
                                     </p>
 
                                     <p class="content-item">
                                         <label>
                                             email address
-                                            <input type="text" placeholder="lorem@loremipsum.com" name="email" required>
+                                            <input type="text" placeholder="lorem@loremipsum.com" name="email"
+                                            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"  
+                                            title="Email is invalid format. It must include characters:@.(example@gmail.com)" required>
                                         </label>
                                     </p>
 
                                     <p class="content-item">
                                         <label>
                                             password
-                                            <input type="password" placeholder="*****" name="password" required>
+                                            <input type="password" placeholder="*****" name="password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[.!@#$%^&*_=+-]).{8,12}$" 
+                                             title="Password must be from 8 to 12 characters, includes upper-case, lower-case, number and special characters:!@#$%^&*_=+-" required>
                                         </label>
                                     </p>
 
